--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="./styles/main.scss">
 </head>
 <body>
     
@@ -23,6 +23,6 @@
         </div>
     </header>
 
-    <script src="scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
