--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
     
     <header class="hero"> 
         <div class="container">
-            <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
+            <img class="hero__logo" src="./images/logo_arnor.png" alt="EBAC">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s
+                O maior Aniversário do Brasil começa em <span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
@@ -27,15 +27,15 @@
                             Localização
                             
                         </b>
-                        Allianz Parque - Barra Funda - São Paulo
+                            Jardim Águas Lindas - Águas Lindas 2 - Goiás - GO
                     </li>
                     <li class="infos-bar__infos__item">
-                        <b>Preço</b>
-                        A partir de R$ 120,00
+                        <b>Inscrição</b>
+                        A partir de R$ 150,00
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Quando</b>
-                        12/12/2022 às 19hrs
+                        05/07/2025 às 19hrs
                     </li>
                 </ul>
                 <a href="#" class="button button--primary">Garanta sua vaga</a>
@@ -45,51 +45,66 @@
     <section class="event event--frontend" > 
         <div class="container" data-aos="fade-right">
             <div class="event__details">
-                <h2 class="event__details__title">Front-End</h2>
+                <h2 class="event__details__title">Local</h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magni possimus laborum placeat consequuntur reprehenderit corporis quaerat pariatur? Autem quibusdam doloremque nesciunt officiis in, exercitationem perferendis voluptate qui voluptatem excepturi!
 
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="frontend">
+            <img class="event__image" src="./images/local.jpg" alt="frontend">
         </div>
     </section>
     <section class="event event--ui-ux event--image-left" > 
         <div class="container" data-aos="fade-left">
             <div class="event__details">
-                <h2 class="event__details__title">UI/UX</h2>
+                <h2 class="event__details__title">Doces</h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magni possimus laborum placeat consequuntur reprehenderit corporis quaerat pariatur? Autem quibusdam doloremque nesciunt officiis in, exercitationem perferendis voluptate qui voluptatem excepturi!
 
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="frontend">
+            <img class="event__image" src="./images/doces.png" alt="frontend">
         </div>
     </section>
     <section class="event event--data-science"> 
         <div class="container" data-aos="fade-right">
             <div class="event__details">
-                <h2 class="event__details__title">Data Science</h2>
+                <h2 class="event__details__title">Churrasco</h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magni possimus laborum placeat consequuntur reprehenderit corporis quaerat pariatur? Autem quibusdam doloremque nesciunt officiis in, exercitationem perferendis voluptate qui voluptatem excepturi!
 
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="frontend">
+            <img class="event__image" src="./images/churrasco.jpeg" alt="frontend">
         </div>
     </section>
     <section class="event event--backend event--image-left"> 
         <div class="container" data-aos="fade-left">
             <div class="event__details">
-                <h2 class="event__details__title">Backend</h2>
+                <h2 class="event__details__title">Salgados</h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magni possimus laborum placeat consequuntur reprehenderit corporis quaerat pariatur? Autem quibusdam doloremque nesciunt officiis in, exercitationem perferendis voluptate qui voluptatem excepturi!
 
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="frontend">
+            <img class="event__image" src="./images/salgados.jpg" alt="frontend">
         </div>
     </section>
+    <footer>
+        <div class="rodape">
+            <ul class="rodape__coluna">
+                <li class="rodape__coluna__text">
+                    <p>Dev Arnor</p>
+                </li>
+                <li class="rodape__coluna__text">
+                    <a href="https://www.instagram.com/dev.arnor/">Instagram</a>
+                </li>
+                <li class="rodape__coluna__text">
+                    <a href="https://github.com/ArnorSantosNunes">Github</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./scripts/main.js"></script>
